# vnxtk

./: .gitignore  README.md  pyproject.toml  test.py
tests/: __init__.py
vnxtk/: VNet.py  __about__.py  __init__.py
vnxtk/alterations/: __init__.py  abstract.py  random_boundary.py  random_removal.py  random_rewiring.py
vnxtk/builders/: __init__.py  abstract.py  bifurcation.py  grid.py  reanimate.py  voronoi.py
vnxtk/flow_models/: __init__.py  abstract.py  linear.py
