[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vnxtk"
description = 'A toolkit for working with vasculature in NetworkX'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Thomas Chaplin", email = "tomrchaplin@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "networkx~=3.0",
    "numpy~=1.24.2",
    "scipy~=1.10.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/vnxtk#readme"
Issues = "https://github.com/unknown/vnxtk/issues"
Source = "https://github.com/unknown/vnxtk"

[tool.hatch.version]
path = "vnxtk/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=vnxtk --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "vnxtk/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
